Hide theme icons and strip leading words from headings

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -1,4 +1,4 @@
-﻿/* docs/assets/stylesheets/extra.css */
+/* docs/assets/stylesheets/extra.css */
 
 /* Hide Material theme nav toggles (carets) */
 .md-nav__toggle,
